[tool.isort]
profile = "black"

[tool.poetry]
name = "weni-commons"
version = "0.0.1a0"
description = "Weni's common utilities for Python backends"
authors = ["Kallil Souza dos Santos <kallilsouza@hotmail.com>"]
readme = "README.md"
packages = [{ include = "weni" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = ">=3.2.22,<6.0"
djangorestframework = ">=3.12.0,<4.0"
django-redis = ">=4.0.0,<6.0"
celery = ">=5.0.0,<6.0"
weni-feature-flags = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
